# NEW-playwright-pytest

./: .env  .env.example  .gitignore  AGENTS.md  BRANCHES.md  CHANGELOG.md  CLAUDE.md  Dockerfile.txt  README.md  conftest.py  docker-compose.yml  global_setup.py  pytest.ini  requirements.txt
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml  test_rec_ws.py
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 0001_init.py  0002_add_suite_version.py  0003_add_parameters_to_cases.py  0004_add_case_version.py
backend/app/: bootstrap.py  config.py  deps.py  main.py
backend/app/db/: session.py
backend/app/models/: __init__.py  audit.py  auth.py  catalog.py  runtime.py
backend/app/routers/: auth.py  cases.py  config.py  dashboard.py  reports.py  runs.py  schedules.py  suites.py
backend/app/schemas/: auth.py  catalog.py
backend/app/security/: jwt.py  password.py  providers.py  rbac.py
backend/app/services/: auth_service.py  case_service.py  playback.py  recorder.py  recorder_process.py  runner.py  scheduler.py  script_gen.py  suite_service.py
backend/app/ws/: playback_ws.py  rec_ws.py  run_ws.py
backend/config/: recording_url.json
backend/lib_compat/: json_store_async.py
backend/scripts/: canary_30d.py  check_migration_readiness.py  import_legacy_json.py  verify_legacy_migration.py
backend/tests/: conftest.py
backend/tests/integration/: test_bootstrap.py  test_docker_compose.py  test_dual_write.py  test_health.py  test_import_legacy.py  test_migrations.py  test_suite_routes.py
backend/tests/unit/: test_auth_service.py  (+6 more)
(+397 files in other folders)
