[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "dsep-backend"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "apscheduler>=3.10",
    "pydantic-settings>=2.2",
    "pydantic[email]>=2.6",
    "python-jose[cryptography]>=3.3",
    "passlib[argon2]>=1.7",
    "python-multipart>=0.0.9",
    "websockets>=12.0",
    "httpx>=0.27",
    "aiofiles>=23.2",
    "playwright>=1.48",
    "pytest-breadcrumb[playwright]>=0.1.0a2",
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-asyncio>=0.23", "pytest-cov", "ruff", "mypy"]

[tool.setuptools.packages.find]
where = ["."]
include = ["app", "app.*"]
